--- a/css/test5.css
+++ b/css/test5.css
@@ -31,6 +31,7 @@ p{
 }
 h1{
     margin: 0;
+
 }
 
 .wrap{
@@ -42,8 +43,8 @@ h1{
     position: fixed;
     top: 0;
     width: 100%;
-    
     background-color: #5fc0cd;
+    z-index: 9999;
 }
 
 .header h1{
@@ -61,6 +62,7 @@ h1{
     height: .38rem;
     background: url(../images/test5_03.png) no-repeat;
     background-size: 100%;
+    cursor: pointer;
 }
 
 
@@ -79,11 +81,13 @@ h1{
     border-radius: .1rem;
     width: 43%;
     text-align: center;
+    cursor: pointer;
 }
 
 .btn-message{
     border: 1px solid #5fc0cd;
     color: #5fc0cd;
+    background-color: #fff;
 }
 
 .btn-contact{
@@ -98,6 +102,8 @@ h1{
 .main{
     position: relative;
     margin-top: .87rem;
+    margin-bottom: 2.25rem;
+    border-bottom: 2px solid #e1e5e7;
 }
 
 .data{
@@ -123,7 +129,7 @@ h1{
     margin-left: .3rem;
     margin-right: .4rem;
     border-radius: 50%;
-    background: url(../images/task5_03.png) no-repeat;
+    background: url(../images/lion.jpg) no-repeat;
     background-size: 100%;
 }
 
@@ -157,11 +163,88 @@ h1{
     font-size: .24rem;
 }
 
+
 /* 护工资料 */
+.information{
+    font-size: .32rem;
+}
 
+.row1{
+    padding: .35rem 0;
+    border-bottom: 2px solid #e1e5e7;
+}
 
+.row1 h1{
+    border-left: 3px solid #5fc0cd;
+    margin-left: .3rem;
+    font-size: .32rem;
+    text-indent:.28rem;
+    line-height: 1;
+}
 
+.row{
+    padding: .35rem 0 .35rem .28rem;
+    margin-left: .33rem;
+    border-bottom: 2px solid #e1e5e7;
+    line-height: 1;
+    font-size: .32rem;
+}
 
+.row6{
+    border-bottom-width: 0;
+}
 
+.xx-icon{
+    display: inline-block;
+    width: .24rem;
+    height: .28rem;
+    margin-right: .1rem;
+    background: url(../images/xx-icon.png) no-repeat;
+    background-size: 100% 100%;
+    vertical-align:bottom;
+}
 
+.sl{
+    display: inline-block;
+    border-left: 1px solid #e1e5e7;
+    border-right: 1px solid #e1e5e7;
+    margin: 0 .17rem;
+    height:.32rem;
+    vertical-align:bottom;
+}
+
+.hs{
+    padding-right: .24rem;
+    margin-right: .25rem;
+    color: #999;
+    border-right: 2px solid #e1e5e7;
+}
+
+.redspan{
+    color: #e26163;
+    font-weight: bold;
+}
+.zwjs{
+    display: table-cell;
+    padding-right: .8rem;
+    
+    font-size: .26rem;
+    line-height: 1.3;  
+    text-align: justify;
+}
+.hh{
+    display: table-cell;
+    width: 1.84rem;
+    vertical-align: middle;
+    color: #999;
+}
+
+.sx{
+    display: inline-block;
+    border-left: 1px solid #e1e5e7;
+    border-right: 1px solid #e1e5e7;
+    margin: 0 .25rem;
+    height:.35rem;
+    vertical-align:bottom;
+}
 /* main-end*/
