--- a/css_task7/less/public.less
+++ b/css_task7/less/public.less
@@ -62,6 +62,7 @@
 //三角形图标
 //@_匹配三角形的角方向,@height三角形高度，@width三角形底边
 .triangle-btn(@_,@height,@width,@color){
+    display: block;
     width: 0;
     height: 0;
     border-style: solid;
