--- a/css_task7/less/index.less
+++ b/css_task7/less/index.less
@@ -32,7 +32,7 @@ main{
         font-size: .35rem;
         line-height: 1.15rem;
         color: #9a9a9a;
-
+        cursor: pointer;
         .back-btn{
             position: absolute;
             right: .14rem;
@@ -58,6 +58,7 @@ main{
             font-size: .32rem;
             line-height: 1.32rem;
             color: #fff;
+            cursor: pointer;
             
         }
         span{
@@ -85,6 +86,7 @@ main{
             right: .1rem;
             top:3.65rem;
             .triangle-btn(right,.3rem,.55rem,#fbb435);
+            cursor: pointer;
         }
     }
 
