--- a/css_task7/css/vote.css
+++ b/css_task7/css/vote.css
@@ -153,10 +153,11 @@ ul {
 .g-mn .list {
   flex-wrap: wrap;
   margin-top: .32rem;
+  justify-content: space-between;
 }
 .g-mn .list .item {
   width: 25vw;
-  margin: 0 4vw;
+  margin: 0 3.33333333vw;
 }
 .g-mn .list .item:hover .icon {
   visibility: visible;
