--- a/css_task7/less/vote.less
+++ b/css_task7/less/vote.less
@@ -103,9 +103,10 @@ ul{
     .list{
         flex-wrap: wrap;
         margin-top: .32rem;
+        justify-content: space-between;
         .item{
             width: 25vw;
-            margin: 0 24vw/3/2;
+            margin: 0 20vw/3/2;
             &:hover .icon{
                 visibility: visible;
             }
