--- a/css_task8and9/css/global.css
+++ b/css_task8and9/css/global.css
@@ -85,7 +85,6 @@ a {
 .m-hd .m-nav {
   display: flex;
   justify-content: space-between;
-  margin: 0 -15px;
   padding: 0;
 }
 .m-hd .m-nav .logo {
@@ -98,6 +97,7 @@ a {
   width: 101px;
   text-align: center;
   box-sizing: border-box;
+  border-bottom: 4px solid transparent;
 }
 .m-hd .m-nav .list li a {
   line-height: 95px;
@@ -105,7 +105,7 @@ a {
 }
 .m-hd .m-nav .list li:hover,
 .m-hd .m-nav .list li.active {
-  border-bottom: 4px solid #fff;
+  border-color: #fff;
 }
 /* /m-hd */
 /* m-ft */
@@ -155,9 +155,14 @@ a {
   color: #29b078;
 }
 /*响应式*/
+@media (min-width: 992px) {
+  .list .navbar-nav {
+    margin-right: -34.5px;
+  }
+}
 @media (max-width: 992px) {
   .m-hd .m-nav {
-    padding: 10px;
+    padding: 10px 0;
   }
   .m-nav .list li {
     width: 100% !important;
@@ -178,5 +183,13 @@ a {
   }
   .m-ft .u-share-wx {
     float: none;
+  }
+}
+@media (max-width: 576px) {
+  .m-hd .top .shareLink a {
+    margin-left: 5px;
+  }
+  .m-hd .top .telNum {
+    font-size: 12px;
   }
 }
