--- a/css_task8and9/less/profession.less
+++ b/css_task8and9/less/profession.less
@@ -197,7 +197,12 @@ main{
     }
 
 }
-
+@media(max-width:576px){
+    .content{
+        padding-left: 15px;
+        padding-right: 15px;
+    }
+}
 @media (max-width:400px){
     .synopsis{
         h3{
