--- a/css_task8and9/less/recommend.less
+++ b/css_task8and9/less/recommend.less
@@ -78,7 +78,7 @@
             border-radius: 50%;
             margin-right: 5px;
         }
-        .circle_active{
+        li:hover .circle,.circle_active{
             background-color: #f9a372;
         }
     }
