--- a/css_task8and9/less/global.less
+++ b/css_task8and9/less/global.less
@@ -106,7 +106,7 @@ a{
     .m-nav{
         display: flex;
         justify-content: space-between;
-        margin: 0 -15px;
+        
         padding: 0;
         .logo{
             display: inline-block;
@@ -119,12 +119,13 @@ a{
                 width: 101px;
                 text-align: center;
                 box-sizing: border-box;
+                border-bottom: 4px solid transparent;
                 a{
                     line-height: 95px;
                     font-size: 16px;
                 }
                 &:hover,&.active{
-                    border-bottom: 4px solid #fff;
+                    border-color: #fff;
                 }
             }
         }
@@ -190,11 +191,15 @@ a{
 
 
 /*响应式*/
-
+@media(min-width:992px){
+    .list .navbar-nav{
+        margin-right: -(101px/2-16px);
+    }
+}
 @media (max-width: 992px) {
     .m-hd{
         .m-nav{
-            padding: 10px;
+            padding: 10px 0;
         }
     }
     .m-nav{
@@ -225,4 +230,14 @@ a{
         }
     }
     
+    
+    
   }
+@media (max-width:576px){
+    .m-hd .top .shareLink a{
+        margin-left: 5px;
+    }
+    .m-hd .top .telNum{
+        font-size: 12px;
+    }
+}
