--- a/css_task8and9/css/profession.css
+++ b/css_task8and9/css/profession.css
@@ -385,6 +385,10 @@ main {
     padding-left: 15px;
     padding-right: 15px;
   }
+  .box {
+    margin-left: -15px;
+    margin-right: -15px;
+  }
 }
 @media (max-width: 400px) {
   .synopsis h3 {
