--- a/css_task8and9/less/profession.less
+++ b/css_task8and9/less/profession.less
@@ -202,6 +202,10 @@ main{
         padding-left: 15px;
         padding-right: 15px;
     }
+    .box{
+        margin-left: -15px;
+        margin-right: -15px;
+    }
 }
 @media (max-width:400px){
     .synopsis{
