--- a/css_task10/less/index.less
+++ b/css_task10/less/index.less
@@ -406,13 +406,9 @@ ul{
         .pattern{
             width: 100%;
         }
-        .select-btn{
-            top:-5px;
-            right: 0;
-            transform: translateY(-100%);
-        }
+
         .content-text{
-            padding-right: 0;
+            // padding-right: 0;
             padding-left: 15px;
         }
     }
