--- a/css_task10/less/index.less
+++ b/css_task10/less/index.less
@@ -190,7 +190,7 @@ ul{
     .content-text{
         position: relative;
         padding-left: 45px;
-        padding-right: 150px;
+        padding-right: 140px;
         border: 1px solid #e7e7e7;
         margin: 0 -1px;
         color:#8b8c8c;
@@ -411,6 +411,16 @@ ul{
             // padding-right: 0;
             padding-left: 15px;
         }
+        .size label{
+            display: block;
+        }
+        .size>i{
+            // float: right;
+            margin: 0;
+            margin-top: 15px;
+            // margin-left: 30px;
+            
+        }
     }
 
 }
@@ -430,20 +440,7 @@ ul{
         }
 
     }
-    .m-mn{
-        .size{
-            // overflow: hidden;
-            // text-align: center;
-        }
-        .size label{
-            display: block;
-        }
-        .size>i{
-            // float: right;
-            margin-top: 15px;
-            margin-left: 30px;
-        }
-    }
+
 }
 
 @media (max-width:576px){
@@ -461,6 +458,9 @@ ul{
         h3{
             font-size: 16px;
             line-height: 25px;
+        }
+        .content{
+            font-size: 14px;
         }
     }
 }
