--- a/css_task12/css/task6.css
+++ b/css_task12/css/task6.css
@@ -11,6 +11,9 @@ body {
 a {
   text-decoration: none;
 }
+/* 功能 */
+/* 1.模拟select下拉框 */
+/* 2.三角形 */
 /* 默认 */
 /* 统一设置雪碧图-背景图 */
 .location {
@@ -66,6 +69,18 @@ a {
   width: 100%;
   margin: 0 auto;
 }
+.g-nav {
+  margin-top: 0.94rem;
+}
+.g-nav .m-selectBox {
+  float: left;
+  color: #b3b3b3;
+}
+.g-nav:after {
+  content: "";
+  display: block;
+  clear: both;
+}
 /* 模块 */
 .m-hd {
   display: flex;
@@ -91,9 +106,6 @@ a {
   background-color: #fff;
   color: #5fc0cd;
   margin-left: -2px;
-}
-.m-nav {
-  margin-top: 0.94rem;
 }
 .m-mn {
   margin-bottom: 1.12rem;
@@ -169,6 +181,50 @@ a {
 .m-ft > div {
   cursor: pointer;
 }
+.m-selectBox {
+  position: relative;
+  width: 33.33333333%;
+  box-sizing: border-box;
+  text-align: center;
+}
+.m-selectBox .select {
+  position: relative;
+  border: 1px solid #e1e5e7;
+  font-size: 0.28rem;
+  line-height: 0.8rem;
+}
+.m-selectBox .select-triangle {
+  position: absolute;
+  right: 5px;
+  top: 50%;
+  transform: translateY(-50%);
+}
+.m-selectBox .subBox {
+  display: none;
+  position: absolute;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  top: 100%;
+  left: 0;
+  right: 0;
+  border: 1px solid #e1e5e7;
+  border-top-width: 0;
+  background-color: #fff;
+}
+.m-selectBox .select {
+  border-left-width: 0;
+  border-top-width: 0;
+}
+.m-selectBox .select-triangle {
+  display: block;
+  width: 0;
+  height: 0;
+  border-style: solid;
+  overflow: hidden;
+  border-width: 0.08rem 0.07rem 0 0.07rem;
+  border-color: #afbac0 transparent transparent transparent;
+}
 /* 元件 */
 .u-btn {
   float: left;
@@ -195,5 +251,4 @@ a {
 .u-select option {
   text-align: center;
 }
-/* 功能 */
 /* 皮肤 */
