--- a/css_task12/less/task5.less
+++ b/css_task12/less/task5.less
@@ -38,7 +38,8 @@ h1{
     margin: 0 auto;
 }
 .g-mn{
-    margin: .8rem 0 1.58rem;
+    margin: .8rem 0 3rem;
+    border-bottom:1px solid #e1e5e7
 }
 /* 模块 */
 .m-hd{
@@ -101,7 +102,7 @@ h1{
     font-size: .32rem;
     .row1{
         padding: .35rem 0;
-        border-bottom: 2px solid #e1e5e7;
+        border-bottom: 1px solid #e1e5e7;
     }
     
     .row1 h2{
@@ -115,7 +116,7 @@ h1{
     .row{
         padding: .35rem 0 .35rem .28rem;
         margin-left: .33rem;
-        border-bottom: 2px solid #e1e5e7;
+        border-bottom: 1px solid #e1e5e7;
         line-height: 1;
         font-size: .32rem;
     }
