--- a/js_task2/install.less
+++ b/js_task2/install.less
@@ -64,6 +64,7 @@ ul{
         height: .41rem;
         background: url('./images/back-btn_03.png') no-repeat;
         background-size: 100% 100%;
+        cursor: pointer;
     }
     >h1{
         margin: 0;
