--- a/js_task3/css/judge.css
+++ b/js_task3/css/judge.css
@@ -31,15 +31,23 @@ h1 {
   max-width: 920px;
   padding: 0.3rem 0.17rem 0.16rem;
   border-bottom: 1px solid #74d4eb;
+  background-color: #29bde0;
+  z-index: 1000;
 }
 .g-mn {
   margin-top: 49px;
-  padding: 0.86rem 13.75% 0.6rem;
+  margin-bottom: 100px;
+  padding: 0 0.17rem;
+  overflow: hidden;
 }
-.g-mn p {
-  color: #29bde0;
-  font-size: .4rem;
-  font-weight: bold;
+.g-ft {
+  position: fixed;
+  padding: .46rem 0 .59rem;
+  bottom: 0;
+  width: 100%;
+  box-sizing: border-box;
+  max-width: 920px;
+  background-color: #29bde0;
 }
 /* 模块 */
 .m-hd {
@@ -69,60 +77,50 @@ h1 {
   background-image: url('../images/close-btn.png');
   right: 0;
 }
-.m-lookBox {
-  position: relative;
-  height: 6.45rem;
-  border: .06rem solid #fff;
-  margin-bottom: 1.18rem;
-  background-color: #ffedc5;
-  text-align: center;
-}
-.m-lookBox .check {
-  display: none;
-  margin-top: 1.8rem;
-  width: 3.02rem;
-}
-.m-lookBox .content-wrap {
-  position: relative;
-  width: 2.23rem;
-  height: 2.23rem;
-  margin: .57rem auto .3rem;
-  border-radius: 50%;
-  background-color: #fbb435;
-}
-.m-lookBox .content-wrap img {
-  position: absolute;
-  bottom: 0;
-  left: .3rem;
-  width: 1.49rem;
-}
-.m-lookBtn input[type="button"] {
-  display: block;
-  width: 100%;
-  border: none;
+.m-btn {
+  width: 77.1875%;
+  margin: 0 auto;
   color: #fff;
   line-height: .87rem;
   font-size: .4rem;
   background-color: #fbb435;
-  outline: none;
   cursor: pointer;
+  text-align: center;
+}
+.m-statusBox {
+  position: relative;
+  float: left;
+  width: 22.77227723%;
+  margin: .6rem 4.4%;
+  padding: calc(22.772% / 2) 0;
+  border: .05rem solid #fff;
+}
+.m-statusBox > p {
+  width: 100%;
+  position: absolute;
+  margin: 0;
+  top: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: .4rem;
+  height: 75%;
+  background-color: #f5c97b;
+  line-height: 1;
+}
+.m-statusBox > span {
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #83b09a;
+  color: #fff;
+  height: 25%;
+  font-size: .32rem;
+  line-height: 1;
 }
 /* 元件 */
-.u-cri {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: absolute;
-  top: -0.03rem;
-  left: 50%;
-  border-radius: 50%;
-  transform: translate(-50%, -50%);
-  width: .68rem;
-  height: .68rem;
-  background-color: #fff;
-  color: #f56b81;
-  font-size: .4rem;
-  border: 0.04rem solid #ffedc5;
-}
 /* 功能 */
 /* 皮肤 */
