--- a/js_task3/less/install.less
+++ b/js_task3/less/install.less
@@ -62,7 +62,7 @@ ul{
         transform: translateY(-50%);
         width: .28rem;
         height: .41rem;
-        background: url('../images/back-btn_03.png') no-repeat;
+        background: url('../images/back-btn.png') no-repeat;
         background-size: 100% 100%;
         cursor: pointer;
     }
